chore: 更新依赖版本，添加 Qodana 配置文件，优化代码逻辑